Nearly finished, just need to change font weight on some things and also get one sentence to stop wrapping

--- a/css/index.css
+++ b/css/index.css
@@ -68,13 +68,16 @@ header{
     display-flex:flex;
     flex-direction: row;
     width:100%;
+    flex-wrap:wrap;
+    justify-content: space-evenly;
 
 }
 
 #lambdaLogo img{
+    display:flex;
+    flex-wrap:wrap;
     src: url('lambda-black.png');
-    height:2rem;
-    width:auto;
+    margin:0 0rem;
 }
 
 .jumboImg{
@@ -82,20 +85,26 @@ header{
     width:100%;
 }
 
-header .navBar{
+.navBar{
         display:flex;
         justify-content: space-evenly;
         flex-direction: row;
-        width:70%;
         flex-wrap:wrap;
-        margin:3% auto;
+        margin:3% 5% 1% 0%;
+        max-width:100%;
+        text-decoration:none;
+        
+
 }
 
   .bStyle{
+    display:flex;
+    flex-wrap:wrap;
     font-size:1rem; 
     border-style:none;
     justify-content: space-evenly;
     background-color: transparent;
+    
   
     
   }
@@ -111,17 +120,24 @@ p {
     line-height: 1.4;
 }
 
+.text-container{
+    margin-top:2rem;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
 }
 #aboutPar{
-    margin:2rem 0rem 3rem 2rem;
+    margin:2rem 0rem 0rem 2rem;
     padding-bottom:1.5rem;
     border-bottom:1.5px black dotted;
     width:100%
 }
 
+h1{
+    margin-top:1rem;
+}
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -137,8 +153,36 @@ p {
 }
 
 .middle-content {
+    display: flex;
+    flex-wrap:wrap;
+    max-width:100%;
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+
+}
+
+.midContent{
+width:48%;
+margin:1rem auto;
+padding:1rem 0rem;
+border-bottom: 1px dashed black;
+
+}
+
+.midContent p{
+    margin-bottom:1rem;
+}
+
+.middle-content h2{
+   display:flex;
+   flex-flow:wrap;
+   width:100%;
+}
+button{
+    background-color:transparent;
+    border-radius: 6px;
+    font-size:1rem;
+    text-decoration: none;
+    padding:.5rem 1.5rem .5rem 1.5rem;
 }
 
 .middle-content h2 {
@@ -150,19 +194,25 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    width:100%;
+    
 }
 
 .middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
+    width: 15%;
+    height: 7rem;
     background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
+ #together{
 
+    margin-bottom:3rem;
+ }
 /*BOX COLORS*/
 #box1{
 background-color:teal;
@@ -178,21 +228,26 @@ background-color:teal;
     background-color:coral;
 }
 #box5{
-    crimson
+     background-color:crimson;
 }
+
 #box6{
     background-color:forestgreen;
 }
-#box7{background-color:darkorchid;
-}
-#box8{background-color:hotpink;
-}
-#box9{background-color:indigo;
-}
-#box10{background-color:dodgerblue;
 
+#box7{
+    background-color:darkorchid;
+}
+#box8{
+    background-color:hotpink;
+}
 
+#box9{
+    background-color:indigo;
+}
 
+#box10{
+    background-color:dodgerblue;
 
 }
 .bottom-content {
